agregadas nuevas imágenes para jumbotron, css para navbar

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    
+    <!-- Mi Css -->
+    <link rel="stylesheet" href="style.css" type="text/css">
 
     <title>Prueba HTML&CSS</title>
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
@@ -32,15 +36,15 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Brand</a>
+                <a class="navbar-brand" href="index.html"> Fundación Niño y Cancer</a>
               </div>
           
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>
-                  <li><a href="#">Link</a></li>
-                  <li><a href="#">Link</a></li>                  
+                  <li class="active"><a href="#">Inicio<span class="sr-only">(current)</span></a></li>
+                  <li><a href="#">Nosotros</a></li>
+                  <li><a href="#">Noticias</a></li>                  
                 </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
