--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
           
     </main>
     <footer>
+      <div id="formulario">
+        <div class="container">
+          Si tienes alguna pregunta
+          <h3>¡ESCRIBENOS!</h3>
+        </div>
+      </div>
       <div class="container">
         <div class="col-md-4">
           <h4>Contacto</h4>
