agregadas correctamente redes sociales

--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
           </ul>
         </div>
         <div class="col-md-4"></div>
-        <div class="col-md-4">
+        <div class="col-md-4 redes">
           <h4>Nuestras Redes</h4>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><img src="image/facebook-white.svg" style="height:35px" alt=""></li>
+            <li><img src="image/instagram.svg" style="height:35px" alt=""></li>
+            <li><img src="image/twitter-white.svg" style="height:35px" alt=""></li>
           </ul>
         </div>
       </div><!-- /container -->
