redes transformadas en vínculos

--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
         <div class="col-md-4 redes">
           <h4>Nuestras Redes</h4>
           <ul>
-            <li><img src="image/facebook-white.svg" style="height:35px" alt=""></li>
-            <li><img src="image/instagram.svg" style="height:35px" alt=""></li>
-            <li><img src="image/twitter-white.svg" style="height:35px" alt=""></li>
+            <li><a href="#"><img src="image/facebook-white.svg" style="height:35px" alt=""></a> </li>
+            <li><a href="#"><img src="image/instagram.svg" style="height:35px" alt=""></a></li>
+            <li><a href="#"><img src="image/instagram.svg" style="height:35px" alt=""></a></li>
+            <li><a href="#"><img src="image/twitter-white.svg" style="height:35px" alt=""></a></li>
           </ul>
         </div>
       </div><!-- /container -->
