alguntos títulos de noticias

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="thumbnail">
               <img src="..." alt="...">
               <div class="caption">
-                <h3>Thumbnail label</h3>
+                <h3>A volar con Sky</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
@@ -105,7 +105,7 @@
             <div class="thumbnail">
               <img src="..." alt="...">
               <div class="caption">
-                <h3>Thumbnail label</h3>
+                <h3>Montaña de la Alegría 2018</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
@@ -115,7 +115,7 @@
             <div class="thumbnail">
               <img src="..." alt="...">
               <div class="caption">
-                <h3>Thumbnail label</h3>
+                <h3>Finalizó proceso de postulación a Becas de Estudio 2018</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
@@ -125,7 +125,7 @@
             <div class="thumbnail">
               <img src="..." alt="...">
               <div class="caption">
-                <h3>Thumbnail label</h3>
+                <h3>Tallarinata de amor y sonrisas</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
@@ -135,7 +135,7 @@
             <div class="thumbnail">
               <img src="..." alt="...">
               <div class="caption">
-                <h3>Thumbnail label</h3>
+                <h3>Carta de agradecimiento a nuestros socios y colaboradores</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
@@ -145,7 +145,7 @@
             <div class="thumbnail">
               <img src="..." alt="...">
               <div class="caption">
-                <h3>Thumbnail label</h3>
+                <h3>Conozco </h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
