arreglado problema de colores

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"> Niño y Cancer</a>
+                <a class="navbar-brand" href="index.html"><img src="image/logo_fundacion.png" style="height:30px" alt=""></a>
               </div>
           
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -177,10 +177,6 @@
     </main>
     <footer>
       <div id="formulario">
-        <div class="container">
-          Si tienes alguna pregunta
-          <h3>¡ESCRIBENOS!</h3>
-        </div>
       </div>
       <div class="container">
         <div class="col-md-4">
