--- a/index.html
+++ b/index.html
@@ -93,60 +93,63 @@
           <h2>Noticias</h2>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="..." alt="...">
               <div class="caption">
                 <h3>A volar con Sky</h3>
-                <p>...</p>
+                <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="..." alt="...">
               <div class="caption">
                 <h3>Montaña de la Alegría 2018</h3>
-                <p>...</p>
+                <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-3 ">
             <div class="thumbnail">
-              <img src="..." alt="...">
               <div class="caption">
                 <h3>Finalizó proceso de postulación a Becas de Estudio 2018</h3>
-                <p>...</p>
+                <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="..." alt="...">
               <div class="caption">
                 <h3>Tallarinata de amor y sonrisas</h3>
-                <p>...</p>
+                <p>Con gran éxito se desarrolló nuestra Tallarinata de Amor y Sonrisas el 30 de agosto en el Estadio del Banco Central.</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-3 ">
             <div class="thumbnail">
-              <img src="..." alt="...">
               <div class="caption">
-                <h3>Carta de agradecimiento a nuestros socios y colaboradores</h3>
-                <p>...</p>
+                <h3>Carta de agradecimiento año 2016</h3>
+                <p>Fundación Niño y Cáncer agradece sinceramente a empresas, socios, particulares, colegios y a cada uno de ustedes</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-3 ">
             <div class="thumbnail">
-              <img src="..." alt="...">
               <div class="caption">
-                <h3>Conozco </h3>
-                <p>...</p>
+                <h3>Conozca los requisitos para postular a nuestros departamentos de acogida </h3>
+                <p>Departamento de acogida abre cupos para el año 2017.</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <div class="caption">
+                <h3>Ex paciente publica su libro "Con tu apoyo, yo le gano al cancer"</h3>
+                <p>Marlene Zavala escribe para devolver la mano.</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
@@ -155,17 +158,7 @@
             <div class="thumbnail">
               <img src="..." alt="...">
               <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p>...</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <img src="..." alt="...">
-              <div class="caption">
-                <h3>Thumbnail label</h3>
+                <h3>¡Haz Click para Ver Más!</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
@@ -193,7 +186,6 @@
           <h4>Nuestras Redes</h4>
           <ul>
             <li><a href="#"><img src="image/facebook-white.svg" style="height:35px" alt=""></a> </li>
-            <li><a href="#"><img src="image/instagram.svg" style="height:35px" alt=""></a></li>
             <li><a href="#"><img src="image/instagram.svg" style="height:35px" alt=""></a></li>
             <li><a href="#"><img src="image/twitter-white.svg" style="height:35px" alt=""></a></li>
           </ul>
