se ha modificado la tipografía a nunito

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     
     
     <!-- Mi Css -->
-
-    <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:300,500,700,900" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700,900" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css" type="text/css">
 
     <title>Prueba HTML&CSS</title>
@@ -67,8 +66,8 @@
             <div class="carousel-inner" role="listbox">
               <div id="carousel-background">
                 <div class="container">
-                  <h2>Fundación</h>
                   <h1>Niño y Cancer</h1>
+                  <h2>Fundación</h>
                 </div>
               </div>
               <div class="item active">
