--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div> <!-- /carousel-->
         
     <div class="row">
-      <div class="container">
+      <div class="container titulocontainer">
           <h2>Noticias</h2>
           <div class="col-md-3">
             <div class="thumbnail">
