se agrega la nueva estructura html qué hacemos

--- a/index.html
+++ b/index.html
@@ -96,7 +96,30 @@
               <span class="sr-only">Next</span>
             </a>
         </div> <!-- /carousel-->
-        
+    <div class="row">
+      <div class="container">
+        <div class="col-md-4">
+          <div class="img"></div>
+          <h3>Apoyo durante la enfermedad</h3>
+          <p></p>
+        </div>
+        <div class="col-md-4">
+          <div class="img"></div>
+          <h3></h3>
+          <p></p>
+        </div>
+        <div class="col-md-4">
+          <div class="img"></div>
+          <h3></h3>
+          <p></p>
+        </div>
+        <div class="col-md-4">
+          <div class="img"></div>
+          <h3></h3>
+          <p></p>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="container titulocontainer">
           <h2>Noticias</h2>
