--- a/index.html
+++ b/index.html
@@ -97,31 +97,34 @@
             </a>
         </div> <!-- /carousel-->
     <div class="row">
-      <div class="container">
-        <div class="col-md-4">
-          <div class="img"></div>
-          <h3>Apoyo durante la enfermedad</h3>
-          <p></p>
+      <div class="container quehacemos">
+        <div class="col-md-12 seccionheader">
+          <h1>¿QUÉ HACEMOS?</h1>
         </div>
-        <div class="col-md-4">
-          <div class="img"></div>
-          <h3></h3>
-          <p></p>
+        <div class="col-md-3">
+          <div class="circle"></div>
+          <h3>Apoyamos a Cada Uno</h3>
+          <p>Para el niño y su familia durante la enfermedad.</p>
         </div>
-        <div class="col-md-4">
-          <div class="img"></div>
-          <h3></h3>
-          <p></p>
+        <div class="col-md-3">
+          <div class="circle"></div>
+          <h3>Construímos Espacios para su Bienestar</h3>
+          <p>Creamos los espacios de recreación que mejoran la calidad de vida durante y posterior a su enfermedad.</p>
         </div>
-        <div class="col-md-4">
-          <div class="img"></div>
-          <h3></h3>
-          <p></p>
+        <div class="col-md-3">
+          <div class="circle"></div>
+          <h3>Velamos por su Reintegración Social</h3>
+          <p>Los apoyamos en sus estudios a través de Becas</p>
+        </div>
+        <div class="col-md-3">
+          <div class="circle"></div>
+          <h3>Apoyo para las familias</h3>
+          <p>A través de almuerzo para padres con hijos hospitalizados, cenas de navidad, entre otros. </p>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="container titulocontainer">
+      <div class="container text">
           <h2>Noticias</h2>
           <div class="col-md-3">
             <div class="thumbnail">
