agregado botón de submmit

--- a/index.html
+++ b/index.html
@@ -102,22 +102,30 @@
           <h1>¿QUÉ HACEMOS?</h1>
         </div>
         <div class="col-md-3">
-          <div class="circle"></div>
+          <div class="circle">
+            <img src="image/hand.svg" width="100%">
+          </div>
           <h3>Apoyamos a Cada Uno</h3>
           <p>Para el niño y su familia durante la enfermedad.</p>
         </div>
         <div class="col-md-3">
-          <div class="circle"></div>
+          <div class="circle">
+            <img src="image/espacio.svg" width="90%">
+          </div>
           <h3>Construímos Espacios para su Bienestar</h3>
           <p>Creamos los espacios de recreación que mejoran la calidad de vida durante y posterior a su enfermedad.</p>
         </div>
         <div class="col-md-3">
-          <div class="circle"></div>
+          <div class="circle">
+              <img src="image/people.svg" width="90%">
+          </div>
           <h3>Velamos por su Reintegración Social</h3>
-          <p>Los apoyamos en sus estudios a través de Becas</p>
+          <p>Los apoyamos en sus estudios a través de Becas.</p>
         </div>
         <div class="col-md-3">
-          <div class="circle"></div>
+          <div class="circle">
+            <img src="image/Familia.svg" width="80%">
+          </div>
           <h3>Apoyo para las familias</h3>
           <p>A través de almuerzo para padres con hijos hospitalizados, cenas de navidad, entre otros. </p>
         </div>
@@ -125,7 +133,9 @@
     </div>
     <div class="row">
       <div class="container text">
-          <h2>Noticias</h2>
+          <div class="col-md-12 seccionheader">
+            <h2>Noticias</h2>
+          </div>
           <div class="col-md-3">
             <div class="thumbnail">
               <div class="caption">
@@ -201,9 +211,15 @@
           
     </main>
     <footer>
-      <div id="formulario">
-      </div>
       <div class="container">
+        <div class="col-md-12">
+          <form class="navbar-form ">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Ingresa tu email por favor">
+            </div>
+            <button type="submit" class="btn btn-default">Suscríbete</button>
+          </form>
+        </div>
         <div class="col-md-4">
           <h4>Contacto</h4>
           <ul>
