--- a/index.html
+++ b/index.html
@@ -73,14 +73,17 @@
               <div class="item active">
                 <img src="..." alt="...">
                 <div class="carousel-caption">
-                  ...
+                  <h2>ELLOS NECESITAN DE NUESTRA AYUDA!</h2>
+                  <p>Únete a la campaña donando $7.000 mensuales.</p>
+                  <p style="font-weight:600">¡DONA AQUÍ!</p>
                 </div>
               </div>
               <div class="item">
                 <img src="..." alt="...">
                 <div class="carousel-caption">
-                  <h3>...</h3>
-                  <p>...</p>
+                  <h2>Tú también puedes ser parte!</h2>
+                  <p>Únete a la campaña donando $7.000 mensuales.</p>
+                  <p style="font-weight:600">¡DONA AQUÍ!</p>
                 </div>
               </div>
               ...
@@ -106,7 +109,7 @@
             <img src="image/hand.svg" width="100%">
           </div>
           <h3>Apoyamos a Cada Uno</h3>
-          <p>Para el niño y su familia durante la enfermedad.</p>
+          <p>Nuestros niños son prioridad durante toda su enfermedad.</p>
         </div>
         <div class="col-md-3">
           <div class="circle">
@@ -212,14 +215,6 @@
     </main>
     <footer>
       <div class="container">
-        <div class="col-md-12">
-          <form class="navbar-form ">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Ingresa tu email por favor">
-            </div>
-            <button type="submit" class="btn btn-default">Suscríbete</button>
-          </form>
-        </div>
         <div class="col-md-4">
           <h4>Contacto</h4>
           <ul>
@@ -229,9 +224,17 @@
             <li></li>
           </ul>
         </div>
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <h4>Mantente Informado!</h4>
+          <form class="navbar-form ">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Ingresa tu email por favor">
+            </div>
+            <button type="submit" class="btn btn-default">Suscríbete</button>
+          </form>
+        </div>
         <div class="col-md-4 redes">
-          <h4>Nuestras Redes</h4>
+          <h4>Síguenos!</h4>
           <ul>
             <li><a href="#"><img src="image/facebook-white.svg" style="height:35px" alt=""></a> </li>
             <li><a href="#"><img src="image/instagram.svg" style="height:35px" alt=""></a></li>
