--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="image/logo_fundacion.png" style="height:30px" alt=""></a>
+                <a class="navbar-brand" href="index.html">
+                  <p><img src="image/logo_fundacion.png" style="height:30px; padding-bottom:5px" alt="">
+                  Fundación Niño & Cancer</p>
+                </a>
               </div>
           
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -66,12 +69,11 @@
             <div class="carousel-inner" role="listbox">
               <div id="carousel-background">
                 <div class="container">
-                  <h1>Niño y Cancer</h1>
+                  <h1>Niño & Cancer</h1>
                   <h2>Fundación</h>
                 </div>
               </div>
               <div class="item active">
-                <img src="..." alt="...">
                 <div class="carousel-caption">
                   <h2>ELLOS NECESITAN DE NUESTRA AYUDA!</h2>
                   <p>Únete a la campaña donando $7.000 mensuales.</p>
@@ -79,14 +81,12 @@
                 </div>
               </div>
               <div class="item">
-                <img src="..." alt="...">
                 <div class="carousel-caption">
                   <h2>Tú también puedes ser parte!</h2>
                   <p>Únete a la campaña donando $7.000 mensuales.</p>
                   <p style="font-weight:600">¡DONA AQUÍ!</p>
                 </div>
               </div>
-              ...
             </div>
           
             <!-- Controls -->
