se dio estilo a fono-fax

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
         <div class="col-md-4">
           <h4>Contacto</h4>
           <ul>
-            <li>Fono: 22170821, 22170811</li>
-            <li>Fax: 22170820</li>
+            <li><b>Fono</b>: 221 708 21, 221 708 11</li>
+            <li><b>Fax</b>: 221 708 20</li>
             <li>Tupungato 10070 Vitacura, Santiago de Chile</li>
             <li></li>
           </ul>
