agregadas imagenes para quienes somos en html y css

--- a/index.html
+++ b/index.html
@@ -135,6 +135,25 @@
       </div>
     </div>
     <div class="row">
+      <div class="container">
+        <div class="col-md-6">
+          <div class="avatarequipo" id="img1"></div>
+          <div class="avatarequipo" id="img2"></div>
+          <div class="avatarequipo" id="img3"></div>
+          <div class="avatarequipo" id="img4"></div>
+          <div class="avatarequipo" id="img5"></div>
+          <div class="avatarequipo" id="img6"></div>
+          <div class="avatarequipo" id="img7"></div>
+          <div class="avatarequipo" id="img8"></div>
+          <div class="avatarequipo" id="img9"></div>
+        </div><!-- fin col md 6-->
+        <div class="col-md-6">
+
+        </div><!-- fin col md 6-->
+      </div>
+      
+    </div>
+    <div class="row">
       <div class="container text">
           <div class="col-md-12 seccionheader">
             <h2>Noticias</h2>
