agregada sección voluntariado

--- a/index.html
+++ b/index.html
@@ -136,6 +136,35 @@
     </div>
     <div class="row">
       <div class="container">
+        <div class="col-md-12">
+          <h2>¿Cómo nos puedes Ayudar?</h2>
+        </div>
+        <div class="col-md-6">
+          <h3>Voluntariado</h3>
+          <div class="subvoluntario1">
+          </div>
+          <div class="subvoluntario2">
+            <p>Tienes hasta 8 formas de ayudarlos!
+            <br>Hemos creado diferentes opciones para que <b>TODOS</b> podamos ayudar.</p>
+            <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h3>Donaciones</h3>
+          <div class="subdonacion1">
+            <img src="image/noun_Pig_104182.svg">
+          </div>
+          <div class="subdonacion2">
+            <p>Tienes hasta 8 formas de ayudarlos!
+            <br>Hemos creado diferentes opciones para que <b>TODOS</b> podamos ayudar.</p>
+            <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="container">
         <div class="col-md-6">
           <div class="avatarequipo" id="img1"></div>
           <div class="avatarequipo" id="img2"></div>
@@ -147,8 +176,11 @@
           <div class="avatarequipo" id="img8"></div>
           <div class="avatarequipo" id="img9"></div>
         </div><!-- fin col md 6-->
-        <div class="col-md-6">
-
+        <div class="col-md-6 parrafos">
+          <h2>¿Quiénes Somos?</h2>
+          <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
+          <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
+          <a href="#" class="btn btn-default" role="button">Conocenos más!</a>
         </div><!-- fin col md 6-->
       </div>
       
