arreglando thumbnail noticias

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </a>
         </div> <!-- /carousel-->
     <div class="row">
-      <div class="container quehacemos">
+      <div class="container text-center">
         <div class="col-md-12 seccionheader">
           <h1>¿QUÉ HACEMOS?</h1>
         </div>
@@ -136,27 +136,27 @@
     </div>
     <div class="row">
       <div class="container">
-        <div class="col-md-12">
+        <div class="col-md-12 text-center">
           <h2>¿Cómo nos puedes Ayudar?</h2>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 text-center">
           <h3>Voluntariado</h3>
           <div class="subvoluntario1">
           </div>
           <div class="subvoluntario2">
-            <p>Tienes hasta 8 formas de ayudarlos!
-            <br>Hemos creado diferentes opciones para que <b>TODOS</b> podamos ayudar.</p>
+            <h4>Únete a nuestro equipo!</h4>
+            <p>Conoce las diferentes formas de colaborar como voluntario en las diferentes actividades junto a nuestros niños,</h4>
             <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
           </div>
-        </div>
-        <div class="col-md-6">
+        </div>    
+        <div class="col-md-6 text-center">
           <h3>Donaciones</h3>
-          <div class="subdonacion1">
+          <div class="subdonacion1 text-center">
             <img src="image/noun_Pig_104182.svg">
           </div>
           <div class="subdonacion2">
-            <p>Tienes hasta 8 formas de ayudarlos!
-            <br>Hemos creado diferentes opciones para que <b>TODOS</b> podamos ayudar.</p>
+            <h4>Tienes hasta 8 formas de ayudarlos!</h4>
+            <p>Hemos creado diferentes opciones para que <b>TODOS</b> podamos ayudar.</h4>
             <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
           </div>
         </div>
@@ -180,7 +180,7 @@
           <h2>¿Quiénes Somos?</h2>
           <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
           <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
-          <a href="#" class="btn btn-default" role="button">Conocenos más!</a>
+          <a href="#" class="btn btn-default" role="button">Conocer Más!</a>
         </div><!-- fin col md 6-->
       </div>
       
@@ -195,7 +195,6 @@
               <div class="caption">
                 <h4>A volar con Sky</h4>
                 <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -204,7 +203,6 @@
               <div class="caption">
                 <h4>Montaña de la Alegría 2018</h4>
                 <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -213,7 +211,6 @@
               <div class="caption">
                 <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
                 <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -222,7 +219,6 @@
               <div class="caption">
                 <h4>Tallarinata de amor y sonrisas</h4>
                 <p>Con gran éxito se desarrolló nuestra Tallarinata de Amor y Sonrisas el 30 de agosto en el Estadio del Banco Central.</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -231,7 +227,6 @@
               <div class="caption">
                 <h4>Carta de agradecimiento año 2016</h4>
                 <p>Fundación Niño y Cáncer agradece sinceramente a empresas, socios, particulares, colegios y a cada uno de ustedes</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -240,7 +235,6 @@
               <div class="caption">
                 <h4>Conozca los requisitos para postular a nuestros departamentos de acogida </h4>
                 <p>Departamento de acogida abre cupos para el año 2017.</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
@@ -249,17 +243,17 @@
               <div class="caption">
                 <h4>Ex paciente publica su libro "Con tu apoyo, yo le gano al cancer"</h4>
                 <p>Marlene Zavala escribe para devolver la mano.</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="btn btn-primary" role="button">
+            <div class="thumbnail masnoticias">
               <div class="caption">
-                <h4>¡Haz Click para Ver Más!</h4>
+                <p>Galería de Noticias</p>
               </div>
             </div>
           </div>
+
         </div><!-- / container -->
       </div>
           
