--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             <div class="thumbnail">
               <div class="caption">
                 <h4>A volar con Sky</h4>
+                <h5>20 agosto 2018</h5>
                 <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
               </div>
             </div>
@@ -202,6 +203,7 @@
             <div class="thumbnail">
               <div class="caption">
                 <h4>Montaña de la Alegría 2018</h4>
+                <h5>20 agosto 2018</h5>
                 <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
               </div>
             </div>
@@ -210,6 +212,7 @@
             <div class="thumbnail">
               <div class="caption">
                 <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
+                <h5>20 agosto 2018</h5>
                 <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
               </div>
             </div>
@@ -218,6 +221,7 @@
             <div class="thumbnail">
               <div class="caption">
                 <h4>Tallarinata de amor y sonrisas</h4>
+                <h5>20 agosto 2018</h5>
                 <p>Con gran éxito se desarrolló nuestra Tallarinata de Amor y Sonrisas el 30 de agosto en el Estadio del Banco Central.</p>
               </div>
             </div>
@@ -226,6 +230,7 @@
             <div class="thumbnail">
               <div class="caption">
                 <h4>Carta de agradecimiento año 2016</h4>
+                <h5>20 agosto 2016</h5>
                 <p>Fundación Niño y Cáncer agradece sinceramente a empresas, socios, particulares, colegios y a cada uno de ustedes</p>
               </div>
             </div>
@@ -234,6 +239,7 @@
             <div class="thumbnail">
               <div class="caption">
                 <h4>Conozca los requisitos para postular a nuestros departamentos de acogida </h4>
+                <h5>20 agosto 2018</h5>
                 <p>Departamento de acogida abre cupos para el año 2017.</p>
               </div>
             </div>
@@ -242,16 +248,20 @@
             <div class="thumbnail">
               <div class="caption">
                 <h4>Ex paciente publica su libro "Con tu apoyo, yo le gano al cancer"</h4>
+                <h5>20 agosto 2018</h5>
                 <p>Marlene Zavala escribe para devolver la mano.</p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="thumbnail masnoticias">
-              <div class="caption">
-                <p>Galería de Noticias</p>
+            <a href="">
+              <div class="thumbnail masnoticias">
+                <div class="caption">
+                  <p><img src="image/news.svg"></p>
+                  <p>Galería de Noticias</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
 
         </div><!-- / container -->
