--- a/index.html
+++ b/index.html
@@ -191,70 +191,84 @@
             <h2>Noticias</h2>
           </div>
           <div class="col-md-3">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>A volar con Sky</h4>
-                <h5>20 agosto 2018</h5>
-                <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+            <a href=""></a>
+              <div class="thumbnail">
+                <div class="caption">
+                  <h4>A volar con Sky</h4>
+                  <h5>20 agosto 2018</h5>
+                  <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Montaña de la Alegría 2018</h4>
-                <h5>20 agosto 2018</h5>
-                <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 ">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
-                <h5>20 agosto 2018</h5>
-                <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Tallarinata de amor y sonrisas</h4>
-                <h5>20 agosto 2018</h5>
-                <p>Con gran éxito se desarrolló nuestra Tallarinata de Amor y Sonrisas el 30 de agosto en el Estadio del Banco Central.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 ">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Carta de agradecimiento año 2016</h4>
-                <h5>20 agosto 2016</h5>
-                <p>Fundación Niño y Cáncer agradece sinceramente a empresas, socios, particulares, colegios y a cada uno de ustedes</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 ">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Conozca los requisitos para postular a nuestros departamentos de acogida </h4>
-                <h5>20 agosto 2018</h5>
-                <p>Departamento de acogida abre cupos para el año 2017.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Ex paciente publica su libro "Con tu apoyo, yo le gano al cancer"</h4>
-                <h5>20 agosto 2018</h5>
-                <p>Marlene Zavala escribe para devolver la mano.</p>
-              </div>
-            </div>
+            </a>
           </div>
           <div class="col-md-3">
             <a href="">
+              <div class="thumbnail">
+                <div class="caption">
+                  <h4>Montaña de la Alegría 2018</h4>
+                  <h5>20 agosto 2018</h5>
+                  <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 ">
+            <a href="">
+              <div class="thumbnail">
+                <div class="caption">
+                  <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
+                  <h5>20 agosto 2018</h5>
+                  <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="">
+              <div class="thumbnail">
+                <div class="caption">
+                  <h4>Tallarinata de amor y sonrisas</h4>
+                  <h5>20 agosto 2018</h5>
+                  <p>Con gran éxito se desarrolló nuestra Tallarinata de Amor y Sonrisas el 30 de agosto en el Estadio del Banco Central.</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 ">
+            <a href="">
+              <div class="thumbnail">
+                <div class="caption">
+                  <h4>Carta de agradecimiento año 2016</h4>
+                  <h5>20 agosto 2016</h5>
+                  <p>Fundación Niño y Cáncer agradece sinceramente a empresas, socios, particulares, colegios y a cada uno de ustedes</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 ">
+            <a href="">
+              <div class="thumbnail">
+                <div class="caption">
+                  <h4>Conozca los requisitos para postular a nuestros departamentos de acogida </h4>
+                  <h5>20 agosto 2018</h5>
+                  <p>Departamento de acogida abre cupos para el año 2017.</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="">
+              <div class="thumbnail">
+                <div class="caption">
+                  <h4>Ex paciente publica su libro "Con tu apoyo, yo le gano al cancer"</h4>
+                  <h5>20 agosto 2018</h5>
+                  <p>Marlene Zavala escribe para devolver la mano.</p>
+                </div>
+              </div>
+            </a>  
+          </div>
+          <div class="col-md-3">
+            <a href="news.html">
               <div class="thumbnail masnoticias">
                 <div class="caption">
                   <p><img src="image/news.svg"></p>
