agregadas nuevas imagenes para sección nosotros, nuevos estilos y nuevo html!

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-              <div id="carousel-background">
+              <div class="carousel-background carousel-background-img">
                 <div class="container">
                   <h1>Niño & Cancer</h1>
                   <h2>Fundación</h>
