--- a/nosotros.html
+++ b/nosotros.html
@@ -26,6 +26,7 @@
 
     <title>Nosotros</title>
 </head>
+.
 
 <body>
     <header>
@@ -57,7 +58,12 @@
           </nav>
     </header>
     <main>   
-   
+        <div class="carousel-background carousel-background-img2">
+            <div class="container">
+                <h1>Niño & Cancer</h1>
+                <h2>Fundación</h>
+            </div>
+        </div>
    
     </main>
     <footer>
